# TheInfiniteRiddle

./: AGENTS.md  CONTRIBUTING.devtools.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  infinite_riddle_root.py  pyproject.toml
.github/: pull_request_template.md
riddle/: __init__.py  __main__.py  harmony_engine.py
riddle/core/: __init__.py
riddle/io/: __init__.py
riddle/qa/: __init__.py  affect.py
riddle/quote_overlay/: __init__.py  pdf_source.py
riddle/synth/: __init__.py
riddle/vault/: __init__.py
tests/: conftest.py  test_core.py  test_duration_bucket_bias.py  test_harmony_engine.py  test_key_signature.py  test_noise_perc.py  test_paths.py  test_pcm_conversion.py  test_pdf_source.py  test_qa.py  test_seed.py  test_sidecar.py  test_spin.py  test_stem_mix_match.py  test_stems.py  test_time_signature.py
